# agents-from-scratch

./: .gitignore  llm.py  logger.py  main.py  pyproject.toml  util.py
mcp/: logger.py
mcp/clients/node/: index.ts  package-lock.json  package.json
mcp/clients/node/types/: groq-sdk.d.ts
mcp/clients/python/: claude.py  groq.py  groq_client.py  logger.py  main.py  models.md  pyproject.toml  server_config.example.json
mcp/clients/python/mcp_logger/: README.MD  display.py  events.py  wrapper.py
mcp/server/: pyproject.toml  weather.py
prompts/: citations_agent.md  research_lead.md  research_subagent.md  util.py
